Add pipeline synchronization (Wait for submissions, Semaphore)