@@ -1,12 +1,13 @@
 package org.sheepy.vulkan.process.compute.process;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
+import org.sheepy.vulkan.api.adapter.IProcessAdapter;
 import org.sheepy.vulkan.common.allocation.IBasicAllocable;
 import org.sheepy.vulkan.common.execution.ExecutionManager;
 import org.sheepy.vulkan.model.enumeration.EPipelineStage;
+import org.sheepy.vulkan.model.process.AbstractProcess;
 import org.sheepy.vulkan.model.process.compute.ComputeProcess;
 import org.sheepy.vulkan.process.compute.execution.ComputeCommandBuffers;
 import org.sheepy.vulkan.process.process.ProcessContext;
@@ -30,7 +31,17 @@ public class ComputeContext extends ProcessContext
 		this.computeProcess = computeProcess;
 
 		commandBuffers = new ComputeCommandBuffers(this);
-		submission = new ProcessSubmission(logicalDevice, commandBuffers, Collections.emptyList(),
+
+		var processAdapter = IProcessAdapter.adapt(computeProcess);
+
+		List<Long> emittersToWait = new ArrayList<>();
+		for (AbstractProcess waitFor : computeProcess.getWaitForSubmissions())
+		{
+			IProcessAdapter adapter = IProcessAdapter.adapt(waitFor);
+			emittersToWait.add(adapter.getSignalSemaphore());
+		}
+
+		submission = new ProcessSubmission(commandBuffers, emittersToWait, List.of(processAdapter),
 				EPipelineStage.COMPUTE_SHADER_BIT);
 
 		buildAllocationList();
